# VaultSync

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  BACKEND_COMPLETE.md  BACKEND_COMPLETION_AUDIT.md  CHANGELOG.md  COMPREHENSIVE_TECHNICAL_AUDIT_2026.md  CONFLICT_RESOLUTION_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SYSTEM.md  Dockerfile  FRONTEND_COMPLETE.md  FRONTEND_PHASE1_COMPLETE.md  FRONTEND_PHASE3_MILESTONE.md  FRONTEND_PHASE4_COMPLETE.md  FRONTEND_PHASE4_MILESTONE.md  FRONTEND_PHASE5_COMPLETE.md  FRONTEND_PHASE5_MILESTONE.md  FRONTEND_PROGRESS.md  FRONTEND_REFACTORING_PLAN.md  HYPER_CRITICAL_AUDIT.md  HYPER_CRITICAL_FRONTEND_AUDIT.md  PHASE1_CONSOLIDATED_PROGRESS.md  PHASE1_DAY1_COMPLETE.md  PHASE1_PROGRESS_2026-01-04.md  PHASE1_PROGRESS_SESSION2_2026-01-04.md  PHASE1_PROGRESS_SESSION3_2026-01-04.md  PRODUCTION_CLEANUP_2026-01-05.md  README.md  SECURITY_REMEDIATION_2026-01-04.md  TECHNICAL_AUDIT_JAN_2026.md  build_log.txt  build_log_2.txt  build_log_final.txt  build_log_refactor.txt  check_error_8.txt  clippy_output.txt  docker-compose.staging.yml  (+10 more)
.cargo/: config.toml
docs/: API.md  BACKUP_RECOVERY.md  DEPLOYMENT.md  DEVELOPER.md  EMAIL_CONFIGURATION.md  InfoOnUI.md  MIGRATION_GUIDE.md  OPENAPI_CLIENT_GENERATION.md  PRICING_MIGRATION.md  SECURITY_AUDIT_PHASE_14.md  TECHNICAL_SPECIFICATION.md  TROUBLESHOOTING.md  Technical_Specs.md  User_Manual.md  openapi.json  pricingservice.md  projectspecs.md  roadmap.md  vaultsync.md  vaultsync_spec_analysis.md
examples/: demo.rs
frontend/: .gitignore  README.md  pubspec.yaml  swagger_parser.yaml
scripts/: create_admin.ps1  deploy_update.ps1  refactor_state.ps1  refactor_state.py  rollback_db.ps1  start_app.ps1  verify_system.ps1
src/: config.rs  lib.rs  main.rs
tests/: api_tests.rs  (+16 more)
(+219 files in other folders)
