[package]
name = "vaultsync"
version = "0.1.0"
edition = "2021"
description = "Next-generation, offline-first POS system for TCG and collectibles industry"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
mdns-sd = "0.11"
async-trait = "0.1"
log = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
base64 = "0.21"
headers = "0.4"
tower_governor = "0.4"
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
barcoders = "2.0.0"
local-ip-address = "0.6.8"
qrcode = "0.14.1"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls", "builder"] }

# P0 Fix: Proper decimal handling for monetary values (IEEE 754 floats cannot represent 0.01 exactly)
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"

# Phase 10: Monitoring & Observability (minimal deps)
sysinfo = "0.31"
regex = "1"

[dev-dependencies]
tempfile = "3"
